# fastqueue

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv
.github/workflows/: fastqueue_tests.yml
api/: index.html
celery/: index.html
docs/: api.md  celery.md  index.md  test_api.md  test_celery.md  test_config.md
github/workflows/: action_release.yml  build.yml  fastqueue_build.yml  fastqueue_tests.yml
search/: search_index.json
src/: celery_worker.py  main.py  pyproject.toml  requirements.txt  requirements_test.txt
src/test/: conftest.py  test_api.py  test_celery.py
src/tests/: conftest.py  test_api.py  test_celery.py
test_api/: index.html
test_celery/: index.html
test_config/: index.html
